[package]
name = "nzsc_single_player_json_interface"
version = "0.1.0"
authors = ["Kyle Lin <kylejlin.us@gmail.com>"]

repository = "https://github.com/nzsc-org/nzsc_single_player_json_interface"
license = "MIT"
description = "A JSON-string wrapper for nzsc_single_player."

[dependencies]
nzsc_single_player = "0.5.1"
